--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -503,7 +503,7 @@
     padding-left: 30px;
     margin-bottom: -20px;
     margin-top: 10px;
-    color: ##CB023E;
+    color: #CB023E;
     font-weight: 700;
 }
 
