--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -509,6 +509,14 @@
     padding-left: 30px;
 }
 
+.teach .pre-meta li.date {
+    background: url("http://seekingmichigan.org/images/teach-icon-calendar.jpg") no-repeat scroll 0 10% transparent;
+    float: right;
+    margin-top: 10px;
+    width:200px;
+    padding-left: 30px;
+}
+
 .teach .program-info {
     clear: both;
     margin-bottom: 5em;
@@ -527,7 +535,7 @@
 }
 
 .teach .program-info li.share-link {
-    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 10% transparent;
+    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 20% transparent;
     padding-left: 5px;
     margin-bottom: -40px;
     margin-top: 12px;
@@ -543,7 +551,7 @@
 
 .teach .program-info li.application {
     background: url("http://seekingmichigan.org/images/button-apply.jpg") no-repeat scroll 0 50% transparent;
-    float: right;
+    float: right;2
     margin-top: 10px;
     height:30px;
     width:116px;
