--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -513,8 +513,10 @@
     background: url("http://seekingmichigan.org/images/teach-icon-calendar.jpg") no-repeat scroll 0 10% transparent;
     float: right;
     margin-top: 10px;
-    width:200px;
+    width:230px;
     padding-left: 30px;
+    color: #CB023E;
+    font-weight: 700;
 }
 
 .teach .program-info {
