Added width to tour-desc

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -1021,7 +1021,8 @@ div.michigan-map ul.maploc li.maploc11 a {
 	top: 175px;
 }
 
-.teach #tour-desc {
+.teach #left-main-content #tour-desc {
+	width: 560px;
 	float: left;
 	clear: both;
 }
