Resized fonts into pixels rather then ems.

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -378,7 +378,7 @@
 }
 
 .teach #left-main-content h2 {
-	font-size: 1.7em;
+	font-size: 25px;
 	font-weight: 500;
 	line-height: 1.3em;
 	font-family: Georgia,"Times New Roman",Times,serif;
@@ -390,54 +390,56 @@
 }
 
 .teach #left-main-content p {
-	font-size: 1.1em;
-	line-height: 2em;
+	font-size: 12px;
+	line-height: 25px;
 	font-family: Georgia,"Times New Roman",Times,serif;
 	color: #333333;
 }
 
-.teach #left-main-content h2 a{
-	font-size: 1.7em;
+.teach #left-main-content .post h2 a{
+	font-size: 28px;
 	font-weight: 500;
-	line-height: 1.3em;
+	line-height: 42px;
 	font-family: Georgia,"Times New Roman",Times,serif;
 	color: #503E70;
 }
 
-.teach #left-main-content h2 a:hover {
+.teach #left-main-content .post h2 a:hover {
 	text-decoration: underline;
 }
 
-.teach #left-main-content h3 {
-	line-height: 2.5em;
-	font-size: 1.7em;
+.teach #left-main-content .post h3 {
+	line-height: 26px;
+	font-size: 24px;
 	font-weight: lighter;
 	color: #CB023E;
+	border-bottom: 1px dotted #CCCCCC;
 }
 
-.teach #left-main-content h4 {
-	line-height: 2.5em;
-	font-size: 1.7em;
+.teach #left-main-content .post h4 {
+	line-height: 36px;
+	font-size: 24px;
 	font-weight: lighter;
 	color: #666666;
+	border-bottom: 1px dotted #CCCCCC;
 }
 
-.teach #left-main-content h5 {
-	line-height: 2.1em;
-	font-size: 1.4em;
+.teach #left-main-content .post h5 {
+	line-height: 27px;
+	font-size: 18px;
 	font-weight: lighter;
 	color: #503E70;
 }
 
-.teach ul li, li ul li, li li ul li  {
+.teach .post ul li, .post li ul li, .post li li ul li  {
 	list-style-image: url(/images/teach-arrow.png);
-	font-size: 1.1em;
-	line-height: 2em;
+	font-size: 12px;
+	line-height: 18px;
 	font-family: Georgia,"Times New Roman",Times,serif;
 	padding-bottom: 10px;
 }
 
-.teach. blockquote h3 {
+.teach. .blockquote h3 {
 	margin-top: 0;
 }
 
