--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -450,6 +450,19 @@
     position: relative;
 }
 
+.teach #left-main-content #post-comments h3 {
+    color: #2B2201;
+    font-family: "Lucida Grande",Lucida,Verdana,sans-serif;
+    font-size: 1.2em;
+    margin-bottom: 0;
+}
+
+.teach #left-main-content #post-comments li h4 {
+    clear: both;
+    font-size: 1.2em;
+    margin-left: 75px;
+}
+
 .teach .post-header {
 	width: 100%;
 }
