--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -450,7 +450,14 @@
     position: relative;
 }
 
-.teach #left-main-content #post-comments h3, #comment-form h3 {
+.teach #left-main-content #post-comments h3 {
+    color: #2B2201;
+    font-family: "Lucida Grande",Lucida,Verdana,sans-serif;
+    font-size: 1.2em;
+    margin-bottom: 0;
+}
+
+.teach #left-main-content #comment-form h3{
     color: #2B2201;
     font-family: "Lucida Grande",Lucida,Verdana,sans-serif;
     font-size: 1.2em;
