Misspelled length in css

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -560,7 +560,7 @@
     font-weight: 700;
 }
 
-.teach .pre-meta li.legnth {
+.teach .pre-meta li.length {
     background: url("http://seekingmichigan.org/images/teach-icon-clock.jpg") no-repeat scroll 0 10% transparent;
     float: right;
     margin-top: 10px;
