--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -412,7 +412,7 @@
 	line-height: 48px;
 	font-size: 24px;
 	font-weight: lighter;
-	color: #CB023E;
+	color: #503E70;
 	border-bottom: 1px dotted #CCCCCC;
 }
 
