Change asset URLs to match theme path

--- a/theme/stylesheets/screen/facebox.css
+++ b/theme/stylesheets/screen/facebox.css
@@ -1,21 +1,21 @@
 #facebox .b {
-  background:url(http://seekingmichigan.org/images/facebox/b.png);
+  background:url(http://seekingmichigan.org/wp-content/themes/airbag/images/facebox/b.png);
 }
 
 #facebox .tl {
-  background:url(http://seekingmichigan.org/images/facebox/tl.png);
+  background:url(http://seekingmichigan.org/wp-content/themes/airbag/images/facebox/tl.png);
 }
 
 #facebox .tr {
-  background:url(http://seekingmichigan.org/images/facebox/tr.png);
+  background:url(http://seekingmichigan.org/wp-content/themes/airbag/images/facebox/tr.png);
 }
 
 #facebox .bl {
-  background:url(http://seekingmichigan.org/images/facebox/bl.png);
+  background:url(http://seekingmichigan.org/wp-content/themes/airbag/images/facebox/bl.png);
 }
 
 #facebox .br {
-  background:url(http://seekingmichigan.org/images/facebox/br.png);
+  background:url(http://seekingmichigan.org/wp-content/themes/airbag/images/facebox/br.png);
 }
 
 #facebox {
