--- a/theme/stylesheets/screen/civil-war.css
+++ b/theme/stylesheets/screen/civil-war.css
@@ -1,7 +1,7 @@
 /* Civil War pages CSS */
 
 body.civilwar #main .wrapper {
-	background: url("http://seekingmichigan.org/images/body-rpt-bg.gif") repeat-y scroll 50% 0 #FFFFFF;
+	background: url("http://seekingmichigan.org/wp-content/themes/airbag/images/body-rpt-bg.gif") repeat-y scroll 50% 0 #FFFFFF;
 	float: left;
 	margin: 0;
 	padding: 0;
